--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ exclude:
 # Site settings
 title: Centrarium
 subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
+email: aldente0630@gmail.com
 name: Youngmin Kim
 description: >
   A simple yet classy theme for your Jekyll website or blog.
