--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: Stats Overflow
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
+subtitle: "The Answer to Data, Science and Everything"
 email: aldente0630@gmail.com
 name: Youngmin Kim
 description: >
