--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ descriptions:
     desc: "Just some placeholder posts, lorem ipsum and the rest."
     
   - cat: Data-Science
-    desc: "Posts related Data Science"
+    desc: "Posts related data science"
 
 # Social icons and sharing options
 #
