--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ descriptions:
   - cat: dummy
     desc: "Just some placeholder posts, lorem ipsum and the rest."
     
-  - cat: Data-Science
+  - cat: Data-science
     desc: "Posts related data science"
 
 # Social icons and sharing options
