--- a/_config.yml
+++ b/_config.yml
@@ -75,14 +75,14 @@ social:
     username: 
     url: 
     desc: Follow me on Twitter
-    share: false
+    share: true
 
   - name: Facebook
     icon: facebook
     username: 
     url:
     desc: Friend me on Facebook
-    share: false
+    share: true
 
   - name: GitHub
     icon: github
@@ -103,7 +103,7 @@ social:
     username:
     url:
     desc: Add me to your Circles
-    share: false
+    share: true
 
   - name: YouTube
     icon: youtube
