--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ gems:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
   - jekyll-paginate  
+  - jekyll-feed
 
 exclude:
   - "/vendor/"
@@ -199,3 +200,4 @@ protocols:
 
 plugins:
   - jekyll-sitemap
+  - jekyll-feed
