--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,13 @@ social:
     url:
     desc: Share to Hacker News
     share: false
+    
+  - name: Medium
+    icon: medium
+    username: aldente0630
+    url: https://medium.com/@aldente0630
+    desc: Follow me on Medium
+    share: false
 
 # Social sharing protocols
 # These are for automatically generating sharing metadata for FB and Twitter
