--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ descriptions:
   - cat: jekyll
     desc: "Posts describing Jekyll setup techniques."
 
-  - cat: dummy
+  - cat: Data-science
     desc: "Just some placeholder posts, lorem ipsum and the rest."
     
 # Social icons and sharing options
