--- a/_config.yml
+++ b/_config.yml
@@ -49,10 +49,10 @@ ga_tracking_id: "UA-119529310-1"
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: jekyll
+  - cat: Data-science
     desc: "Posts describing Jekyll setup techniques."
 
-  - cat: Data-science
+  - cat: Data-engineering
     desc: "Just some placeholder posts, lorem ipsum and the rest."
     
 # Social icons and sharing options
